cleared all edits of the day

--- a/heckman.bib
+++ b/heckman.bib
@@ -5520,12 +5520,12 @@
 
 @Article{Barshay_2015_US-News,
   Title                    = {Studies Shed Light on Fleeting Benefits of Early Childhood Education},
-  Author                   = {Barshay, Jill},
+  Author                   = {Barshay, Jill and {The Hechinger Report}},
   Journal                  = {U.S. News \& World Report},
   Year                     = {2015},
 
   Month                    = {October 5},
-  Note                     = {Produced by {The Hechinger Report}},
+  Note                     = {http://www.usnews.com/news/articles/2015/10/05/studies-shed-light-on-fleeting-benefits-of-early-childhood-education},
   Volume                   = {News},
 
   Owner                    = {Jessica Dyer},
@@ -12895,7 +12895,7 @@
 @Electronic{BLS_2015_NLSY79,
   Title                    = {National Longitudinal Surveys: The {NLSY79}},
   Author                   = {{Bureau of Labor Statistics}},
-  HowPublished             = {Website},
+  HowPublished             = {Website, http://www.bls.gov/nls/nlsy79.htm},
   Organization             = {United States Department of Labor},
   Url                      = {http://www.bls.gov/nls/nlsy79.htm},
   Year                     = {2015},
@@ -12907,7 +12907,7 @@
 @Electronic{BLS_2011_NLSY79-Children,
   Title                    = {National Longitudinal Surveys: {NLSY79} Children and Young Adults},
   Author                   = {{Bureau of Labor Statistics}},
-  HowPublished             = {Website},
+  HowPublished             = {Website, http://www.bls.gov/nls/nlsy79ch.htm},
   Organization             = {United States Department of Labor},
   Url                      = {http://www.bls.gov/nls/nlsy79ch.htm},
   Year                     = {2011},
@@ -18485,11 +18485,11 @@
   Timestamp                = {2009.06.18}
 }
 
-@Unpublished{Conti_etal_2015_LongTermHealth,
-  Title                    = {The Long-Term Health Effects of Early Childhood Interventions},
+@Unpublished{Conti_etal_2016_LongTermHealth,
+  Title                    = {The Effects of Two Influential Early Childhood Interventions on Health and Healthy Behaviours},
   Author                   = {Conti, Gabriella and Heckman, James J. and Pinto, Rodrigo},
   Note                     = {Forthcoming, \emph{Economic Journal}},
-  Year                     = {2015},
+  Year                     = {2016},
 
   Owner                    = {Owner},
   Timestamp                = {2014.03.24}
@@ -22937,6 +22937,8 @@
   Author                   = {Drange, Nina and Havnes, Tarjei and Sands{\o}r, Astrid M. J.},
   Institution              = {Institute for the Study of Labor},
   Year                     = {2012},
+
+  Address                  = {Bonn},
   Month                    = {November},
   Number                   = {6986},
   Type                     = {Discussion Paper},
@@ -26412,7 +26414,7 @@
 }
 
 @Unpublished{Feller_Grindal_etal_2016_ComparedtoWhat,
-  Title                    = {Compared to What? {V}aration in the Impacts of Early Childhood Education by Alternative Care-Type Settings},
+  Title                    = {Compared to What? {V}ariation in the Impacts of Early Childhood Education by Alternative Care-Type Settings},
   Author                   = {Feller, Avi and Grindal, Todd and Miratrix, Luke and Page, Lindsay},
   Note                     = {Forthcoming, \emph{Annals of Applied Statistics}},
   Year                     = {2016},
@@ -27849,7 +27851,7 @@
 @Electronic{Fox_News_2014_Head_Start_Effects,
   Title                    = {Head {S}tart Has Little Effect by Grade School?},
   Author                   = {{Fox Business News}},
-  HowPublished             = {Video},
+  HowPublished             = {Video, http://video.foxbusiness.com/v/3306571481001/head-start-has-little-effect-by-grade-school/?\#sp=show-clips},
   Language                 = {English},
   Url                      = {http://video.foxbusiness.com/v/3306571481001/head-start-has-little-effect-by-grade-school/?#sp=show-clips},
   Year                     = {2014},
@@ -29656,6 +29658,16 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2015.12.20}
+}
+
+@Unpublished{Garcia_etal_2016_Comp_CBA_Unpublished,
+  Title                    = {The Life-cycle Benefits of an Influential Early Childhood Intervention},
+  Author                   = {Garc\'{\i}a, Jorge Luis, and Heckman, James J., and Hojman, Andr\'{e}s, and Ermini Leaf, Duncan, and Prados, Mar\'{i}a Jos\'{e}, and Shea, Joshua, and Torcasso, Jake C.},
+  Note                     = {University of Chicago. Unpublished},
+  Year                     = {2016},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
 }
 
 @Unpublished{Garcia_2016_National-Implementation-ECI,
@@ -41495,7 +41507,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 @Unpublished{Hojman_2015_EvidenceFadeOut,
   Title                    = {Evidence on the Fade-Out of {IQ} Gains from Early Childhood Interventions: A Skill Formation Perspective},
   Author                   = {Hojman, Andr{\'e}s},
-  Note                     = {University of Chicago, Center for the Economics of Human Development},
+  Note                     = {Unpublished manuscript, University of Chicago, Center for the Economics of Human Development},
   Year                     = {2015},
 
   Institution              = {University of Chicago},
@@ -48880,6 +48892,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Owner                    = {Lynn}
 }
 
+@Unpublished{Scand-Fantasy_2016_SJoE,
+  Title                    = {The Scandinavian Fantasy: The Sources of Intergenerational Mobility in Denmark and the U.S.},
+  Author                   = {Landers{\o}, Rasmus and Heckman, James J.},
+  Note                     = {Forthcoming, \emph{Scandinavian Journal of Economics}},
+  Year                     = {2016},
+
+  Journal                  = {Scandinavian Journal of Economics},
+  Owner                    = {Jenna},
+  Timestamp                = {2016.08.29}
+}
+
 @Unpublished{Lane_2008_OnlineGEDPreparation,
   Title                    = {Online {GED} Preparation, {GED} 2002 Changes},
   Author                   = {{Lane Community College}},
@@ -51917,6 +51940,8 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Author                   = {Love, John M. and Kisker, Ellen Eliason and Ross, Christine M. and Schochet, Peter Z. and Brooks-Gunn, Jeanne and Paulsell, Diane and Boller, Kimberly and Constantine, Jill and Vogel, Cheri and Fuligni, Alison Sidle and Brady-Smith, Christy},
   Institution              = {Mathematica Policy Research},
   Year                     = {2002},
+
+  Address                  = {Princeton, NJ},
   Month                    = {June},
   Number                   = {ED472186},
 
@@ -58194,6 +58219,18 @@ Robinson, Lara Rachel},
   Volume                   = {65}
 }
 
+@InBook{Murray_2013_GivingKids_JJHBOOK,
+  Title                    = {Giving Kids a Fair Chance},
+  Author                   = {Murray, Charles},
+  Editor                   = {Heckman, James J.},
+  Pages                    = {63--67},
+  Publisher                = {MIT Press},
+  Year                     = {2013},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
+}
+
 @Article{Murray_2008_AMERICANTooManytoCollege,
   Title                    = {Are Too Many People Going to College?},
   Author                   = {Murray, Charles},
@@ -61598,7 +61635,7 @@ Robinson, Lara Rachel},
 @Electronic{PSID_2015_Website,
   Title                    = {{PSID}: A National Study of Socioeconomics and Health over Lifetimes and Across Generations},
   Author                   = {{Panel Study of Income Dynamics}},
-  HowPublished             = {Website},
+  HowPublished             = {Website, https://psidonline.isr.umich.edu/default.aspx},
   Organization             = {Institute for Social Research},
   Url                      = {https://psidonline.isr.umich.edu/default.aspx},
   Year                     = {2015},
@@ -64041,6 +64078,19 @@ Robinson, Lara Rachel},
   Timestamp                = {2006.12.22}
 }
 
+@Article{Prentice_1989_Surrogate_SiM,
+  Title                    = {Surrogate Endpoints in Clinical Trials: Definition and Operational Criteria},
+  Author                   = {Prentice, Ross L.},
+  Journal                  = {Statistics in Medicine},
+  Year                     = {1989},
+  Number                   = {4},
+  Pages                    = {431--440},
+  Volume                   = {8},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
+}
+
 @Book{PCERC_2008_BOOKEffectsofPreschool,
   Title                    = {Effects of Preschool Curriculum Programs on School Readiness},
   Author                   = {{Preschool Curriculum Evaluation Research Consortium}},
@@ -66336,6 +66386,19 @@ Robinson, Lara Rachel},
   Owner                    = {Jenni},
   Publisher                = {Oxford University Press},
   Timestamp                = {2015.07.24}
+}
+
+@Book{Rinaldi_2006_ReggioEmilia_BOOK,
+  Title                    = {In Dialogue with {R}eggio {E}milia: Listening, Researching and Learning (Contesting Early Childhood)},
+  Author                   = {Rinaldi, Carlina},
+  Editor                   = {Dahlberg, Gunilla and Moss, Peter},
+  Publisher                = {Routledge},
+  Year                     = {2006},
+
+  Address                  = {New York, NY},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
 }
 
 @Article{Rindermann_2007_EJoP,
@@ -77273,7 +77336,7 @@ Robinson, Lara Rachel},
 @Electronic{US-DoE_2015_Preschool-Grants,
   Title                    = {Preschool Grants for Children with Disabilities: Funding Status},
   Author                   = {{U.S. Department of Education}},
-  HowPublished             = {Website},
+  HowPublished             = {Website, http://www2.ed.gov/programs/oseppsg/funding.html},
   Url                      = {http://www2.ed.gov/programs/oseppsg/funding.html},
   Year                     = {2015},
 
@@ -78170,6 +78233,18 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2009.01.16}
 }
 
+@Book{Vecchi_2010_ReggioEmilia_BOOK,
+  Title                    = {Art and Creativity in {R}eggio {E}milia: Exploring the Role and Potential of Ateliers in Early Childhood Education (Contesting Early Childhood)},
+  Author                   = {Vecchi, Vea},
+  Publisher                = {Routledge},
+  Year                     = {2010},
+
+  Address                  = {New York, NY},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
+}
+
 @Unpublished{Veenman_2002_socioeconomic,
   Title                    = {The Socioeconomic and Cultural Integration of Immigrants in the Netherlands},
   Author                   = {Veenman, J.},
@@ -78538,6 +78613,8 @@ early childhood education and pre-kindergarten programs},
   Author                   = {Vogel, Cheri A. and Aikens, Nikki and Burwick, Andrew and Hawkinson, Laura and Richardson, Angela and Mendenko, Linda and Chazan-Cohen, Rachel},
   Institution              = {{U.S.} Department of Health and Human Services},
   Year                     = {2006},
+
+  Address                  = {Washington, DC},
   Month                    = {December},
   Number                   = {ED498072},
 
@@ -82944,6 +83021,18 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2014.06.16}
+}
+
+@Book{Edwards_etal_1993_ReggioEmilia_BOOK,
+  Title                    = {The Hundred Languages of Children: The {R}eggio {E}milia Approach to Early Childhood Education},
+  Editor                   = {Edwards, Carolyn, and Gandini, Lella, and Forman, George},
+  Publisher                = {Ablex Publishing Corporation},
+  Year                     = {1993},
+
+  Address                  = {355 Chestnut Street, Norwood, NJ},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
 }
 
 @Book{Endler_Magnusson_1976_BOOKInteractionalPsychology,
