anna committing edits and udpated graphs cNLSY and NLSY79

--- a/Appendices/CommonCritiques.tex
+++ b/Appendices/CommonCritiques.tex
@@ -60,4 +60,4 @@
 
 \input{output/abc_noncomp_e2}
 
-\noindent Finally, we note that our methodology in Section~\ref{section:methodology} and the results we present in Section~\ref{section:results} account for the remainder of randomization compromises, as when the families moved or abandoned the study later on. \textbf{7. The results are not greatly sensitive to adjusting for the rest of the randomization compromises}, as we show in Section~\ref{section:results}.
+\noindent Finally, we note that our methodology in Section~\ref{section:methodology} and the results we present in Section~\ref{section:c-functions} account for the remainder of randomization compromises, as when the families moved or abandoned the study later on. \textbf{7. The results are not greatly sensitive to adjusting for the rest of the randomization compromises}, as we show in Section~\ref{section:c-functions}.
