--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@article{blundell2015labor,
+  title={Labor income dynamics and the insurance from taxes, transfers, and the family},
+  author={Blundell, Richard and Graber, Michael and Mogstad, Magne},
+  journal={Journal of Public Economics},
+  volume={127},
+  pages={58--73},
+  year={2015},
+  publisher={Elsevier}
+}
+
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
