--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -154,27 +154,27 @@ generate the IPW weights, and are listed in the table above.
 Families with Dependent Children (AFDC) subsidies, food stamps, survivor benefits, disability
 benefits, social security, rent subsidies, and fuel subsidies. At age 30, public-transfer income includes food stamps, welfare, housing assistance, workman's
 compensation, disability, social security, supplemental security income, unemployment benefits,
-worker's compensation insurance, fuel subsidies, educational and aid grants, and other forms of welfare.} In order to obtain a complete measure of the impact of the ABC/CARE programs on subject income, we interpolate the income streams of subjects for ages 22 to 29, and extrapolate income streams for ages 31 to 67 using three auxiliary datasets described below: NLSY, CNLSY, and PSID. \\
+worker's compensation insurance, fuel subsidies, educational and aid grants, and other forms of welfare.} In order to obtain a complete measure of the impact of the ABC/CARE programs on subject income, we interpolate the income streams of subjects for ages 22 to 29, and extrapolate income streams for ages 31 to 67 using three auxiliary datasets described below: NLSY79, cNLSY, and PSID. \\
 
-\noindent \textbf{The National Longitudinal Survey of Youth (NLSY)} is a longitudinal survey beginning in 1979 that follows individuals born between 1957 and 1964. The initial interview included 12,686 respondents aged 14 to 22. The survey was designed to include 6,111 individuals representing the non-institutionalized civilian population, a supplemental sample of 5,295 civilian Hispanics, Latinos, blacks, non-blacks/non-Hispanics, and economically disadvantaged youth, and a sample of 1,280 who served in the military as of September 30, 1978. When appropriately weighted, the NLSY is nationally representative of the youth living in the U.S. on January 1, 1979. We include individuals from all three subsamples in our analysis. \\
+\noindent \textbf{The National Longitudinal Survey of Youth (NLSY79)} is a longitudinal survey beginning in 1979 that follows individuals born between 1957 and 1964. The initial interview included 12,686 respondents aged 14 to 22. The survey was designed to include 6,111 individuals representing the non-institutionalized civilian population, a supplemental sample of 5,295 civilian Hispanics, Latinos, blacks, non-blacks/non-Hispanics, and economically disadvantaged youth, and a sample of 1,280 who served in the military as of September 30, 1978. When appropriately weighted, the NLSY79 is nationally representative of the youth living in the U.S. on January 1, 1979. We include individuals from all three subsamples in our analysis. \\
 
-\noindent The NLSY collected data on labor market participation, education, family background, family life, health issues, assets and income, government program participation, and measures of cognitive skills. We use these data to estimate a prediction model for subject income for ages 31 through 67. \\
+\noindent The NLSY79 collected data on labor market participation, education, family background, family life, health issues, assets and income, government program participation, and measures of cognitive skills. We use these data to estimate a prediction model for subject income for ages 31 through 67. \\
 
-\noindent We restrict the NLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. With the mean labor income (2014 USD) in the ABC sample being \$12,232 at age 21 and \$32,782 at age 30, and the maximum reported being \$189,938, the cut-off we impose on the auxiliary data is high enough so that everyone in the ABC/CARE sample is represented, yet low enough to exclude high-earning individuals in the auxiliary sample that do not reflect the ABC/CARE sample well. \\
+\noindent We restrict the NLSY79 sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. With the mean labor income (2014 USD) in the ABC sample being \$12,232 at age 21 and \$32,782 at age 30, and the maximum reported being \$189,938, the cut-off we impose on the auxiliary data is high enough so that everyone in the ABC/CARE sample is represented, yet low enough to exclude high-earning individuals in the auxiliary sample that do not reflect the ABC/CARE sample well. \\
 
-\noindent We do not impose a restriction on birth year on the NLSY as all respondents are aged between 47 and 55 at the time of the last interview (conducted in 2012). This age range is within the 31--67 range for which we extrapolate the income of the ABC/CARE subjects. \\
+\noindent We do not impose a restriction on birth year on the NLSY79 as all respondents are aged between 47 and 55 at the time of the last interview (conducted in 2012). This age range is within the 31--67 range for which we extrapolate the income of the ABC/CARE subjects. \\
 
-\noindent Given the biennial nature of the NLSY, we only observe each subject at either odd or even ages. Not only does this reduce the size of the sample on which we fit our prediction model at each age, but it can introduce biases associated with the odd-aged and even-aged cohorts. To address this issue, we perform a linear interpolation on the variables in the NLSY data that enter into our prediction model. This allows us to estimate our prediction model on all subjects of the NLSY satisfying our restrictions at every age. \\
+\noindent Given the biennial nature of the NLSY79, we only observe each subject at either odd or even ages. Not only does this reduce the size of the sample on which we fit our prediction model at each age, but it can introduce biases associated with the odd-aged and even-aged cohorts. To address this issue, we perform a linear interpolation on the variables in the NLSY79 data that enter into our prediction model. This allows us to estimate our prediction model on all subjects of the NLSY79 satisfying our restrictions at every age. \\
 
-\noindent \textbf{The Children of the National Longitudinal Survey of Youth (CNLSY)} is a survey of the children of the mothers from the NLSY, beginning in 1986. At the time of the initial interview, the ages of the children surveyed ranged from 0 to 23. As of 2010, the CNLSY sample includes 11,504 children born to NLSY mothers. With appropriate weights, the CNLSY may be considered nationally representative of children born to women who were aged 14 to 22 during 1979. Interviews were conducted annually between 1986 and 1994, and biennially thereafter. \\
+\noindent \textbf{The Children of the National Longitudinal Survey of Youth (cNLSY)} is a survey of the children of the mothers from the NLSY, beginning in 1986. At the time of the initial interview, the ages of the children surveyed ranged from 0 to 23. As of 2010, the cNLSY sample includes 11,504 children born to NLSY79 mothers. With appropriate weights, the cNLSY may be considered nationally representative of children born to women who were aged 14 to 22 during 1979. Interviews were conducted annually between 1986 and 1994, and biennially thereafter. \\
 
-\noindent Similar to the NLSY, the CNLSY collected data on cognitive ability, motor and social development, home environment, health information, education, attitudes, employment, income, family decisions, and more. We use these data to estimate a prediction model for subject income for ages 22 through 29. \\
+\noindent Similar to the NLSY, the cNLSY collected data on cognitive ability, motor and social development, home environment, health information, education, attitudes, employment, income, family decisions, and more. We use these data to estimate a prediction model for subject income for ages 22 through 29. \\
 
-\noindent As we did with the NLSY, we restrict the CNLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. In addition to this, we limit the sample to subjects born between 1978 and 1983. Because the CNLSY data extend to 2012, this implies that we use the most recent data from the CNLSY in which individuals are aged 29 to 34. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the CNLSY data as possible at every age when interpolating subject income. \\
+\noindent As we did with the NLSY, we restrict the cNLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. In addition to this, we limit the sample to subjects born between 1978 and 1983. Because the cNLSY data extend to 2012, this implies that we use the most recent data from the cNLSY in which individuals are aged 29 to 34. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the cNLSY data as possible at every age when interpolating subject income. \\
 
 \noindent \textbf{The Panel Survey of Income Dynamics (PSID)} is a longitudinal household survey containing between 5,000 and 8,500 families in each wave. It began as a yearly survey in 1968 and has been fielded biennially since 1996. When appropriately weighted, the PSID is designed to be representative of U.S. households. The PSID provides extensive information concerning demographics, economic outcomes, health outcomes, marriage and fertility, and more. In addition to using the PSID to forecast future earnings of ABC/CARE subjects, we use the PSID to forecast health outcomes. See Appendix \ref{section:data_psid} for details on how the PSID relates to health outcomes. \\
 
-\noindent Similar to the CNLSY, we restrict the PSID to individuals born between 1945 and 1981. Because the data extend to 2013, we use the most recent subsample of individuals aged 30 to 67. We also exclude all individuals with labor income exceeding \$300,000 (2014 USD) in any given year. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the PSID data as possible at every age to interpolate subject income. \\
+\noindent Similar to the cNLSY, we restrict the PSID to individuals born between 1945 and 1981. Because the data extend to 2013, we use the most recent subsample of individuals aged 30 to 67. We also exclude all individuals with labor income exceeding \$300,000 (2014 USD) in any given year. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the PSID data as possible at every age to interpolate subject income. \\
 
 \noindent We assume common support between these auxiliary datasets and the analysis sample. This is required in order for us to reliably use external data to provide inference for the ABC/CARE samples. Figure~\ref{fig:support} validates this assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for the variables used to interpolate and extrapolate earnings.  \\
 
@@ -253,24 +253,24 @@ worker's compensation insurance, fuel subsidies, educational and aid grants, and
 	
 	\floatfoot{
 	\footnotesize
-	\noindent Note: These graphs display the support of ABC, PSID, NLSY, and CNLSY
+	\noindent Note: These graphs display the support of ABC, PSID, NLSY79, and cNLSY
 	for variables we use to project future earnings. PIAT math
 	scores are averaged over ages 5--7.
 	}
 \end{figure}
 
 \noindent Both labor and public-transfer income are interpolated using the exact same methodology, so we restrict
-our description to interpolating labor income. We employ the CNLSY dataset to model labor
+our description to interpolating labor income. We employ the cNLSY dataset to model labor
 income at each age from 22 to 29. We use ordinary least squares and regress the labor income of
-CNLSY subjects on background characteristics and early adult outcomes. Variables for background
+cNLSY subjects on background characteristics and early adult outcomes. Variables for background
 characteristics consist of an indicator for being  black, mother's education, and sex. Variables
 used to interpolate early adult outcomes consist of labor income at ages 21 and 30, years of education at age 30, average
 PIAT math scores from ages 5 to 10, and BMI at age 34. We estimate the model on 1,000 bootstrap
-resamples of the CNLSY to obtain a measure of prediction error, and denote the vectors of coefficients
+resamples of the cNLSY to obtain a measure of prediction error, and denote the vectors of coefficients
 \emph{for the outcome variables} by $\beta_{a,s}$, where $a \in \{22, 23, \dots, 29\}$ denotes age, and
 $s \in \{1,2,\dots, 1,000\}$ indexes the bootstrap samples. \\
 
-\noindent The outcome variables we use as independent variables to fit the model to the CNLSY data are also
+\noindent The outcome variables we use as independent variables to fit the model to the cNLSY data are also
 observed in the ABC/CARE data, and we are able to calculate the treatment effects on each of these outcomes
 using the procedures described in Appendix \ref{app:method_fullobs} and Appendix \ref{app:method_partialobs}. We
 obtain these estimates for 1,000 bootstrap resamples of the ABC/CARE data, and denote the vectors of
@@ -289,15 +289,15 @@ the observed early-adult outcomes. In this case, the observed early-adult outcom
 30, years of education at age 30, average PIAT math scores from ages 5 to 10, and BMI at age 34. Since $\gamma_r$ has
 been adjusted to address selection into treatment and attrition in the ABC/CARE data, the bootstrap distribution
 is devoid of selection and attrition issues. In addition, the bootstrap distribution captures
-the error stemming from the ABC/CARE dataset and the prediction error of the model fitted to the CNLSY dataset.
+the error stemming from the ABC/CARE dataset and the prediction error of the model fitted to the cNLSY dataset.
 We take the mean of the empirical bootstrap distribution as our point estimate, and the standard deviation
 of the distribution as the standard error. Again, we carry out this procedure for the
 pooled, male, and female samples. \\
 
-\noindent To extrapolate labor income, we employ the NLSY and PSID datasets. We execute the same estimation
+\noindent To extrapolate labor income, we employ the NLSY79 and PSID datasets. We execute the same estimation
 strategy as above, but with a reduced set of control variables in order to limit the number
 of dropped cases. Specifically, the set of background variables we control for include an indicator for
-being black and gender of the subject. As the NLSY and PSID are not as rich as the CNLSY, we also
+being black and gender of the subject. As the NLSY79 and PSID are not as rich as the cNLSY, we also
 restrict our outcome variables to years of education at age 30 and subject labor income at age 30. \\
 % Similar to the CNLSY, we restrict the PSID to individuals born between 1945 and 1980. As the PSID
 % extends until 2013, this means we are using the most recent subsample of individuals aged 30 to 67.
