fixing space issues and etc

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -28,13 +28,12 @@ The University of Chicago}
 \maketitle
 \thispagestyle{empty}
 
-\clearpage
-
+%\clearpage
 %\pagebreak
+
 \tableofcontents
 \listoffigures
 \listoftables
-\pagebreak
 \doublespacing
 
 %Input Appendices
