--- a/heckman.bib
+++ b/heckman.bib
@@ -1,16 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@article{blundell2015labor,
-  title={Labor income dynamics and the insurance from taxes, transfers, and the family},
-  author={Blundell, Richard and Graber, Michael and Mogstad, Magne},
-  journal={Journal of Public Economics},
-  volume={127},
-  pages={58--73},
-  year={2015},
-  publisher={Elsevier}
-}
-
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -991,6 +981,18 @@
   Month                    = {June},
 
   Timestamp                = {2008.03.26}
+}
+
+@Unpublished{Agostinelli-Wiswall_2016_Identification,
+  Title                    = {Identification of Dynamic Latent Factor Models: The Implications of Re-Normalization in a Model of Child Development},
+  Author                   = {Agostinelli, Francesco and Wiswall, Matthew},
+  Note                     = {Working Paper, W. P. Carey School of Business, Arizona State University},
+
+  Month                    = {July},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.04}
 }
 
 @Article{Agresti_2001_StatMed,
@@ -46819,7 +46821,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2010.08.03}
 }
 
-@Unpublished{Kline-Tartari_2015_AER,
+@Unpublished{Kline_Tartari_2015_AER,
   Title                    = {Bounding the Labor Supply Responses to a Randomized Welfare Experiment: A Revealed Preference Approach},
   Author                   = {Kline, Patrick and Tartari, Melissa},
   Note                     = {Revise and resubmit, \emph{American Economic Review}},
@@ -46829,7 +46831,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2015.10.30}
 }
 
-@Unpublished{Kline-Walters_2016_QJE,
+@Unpublished{Kline_Walters_2016_QJE,
   Title                    = {Evaluating Public Programs with Close Substitutes: The Case of {H}ead {S}tart},
   Author                   = {Kline, Patrick and Walters, Christopher},
   Note                     = {Forthcoming, \emph{Quarterly Journal of Economics}},
@@ -46839,7 +46841,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2016.08.18}
 }
 
-@TechReport{Kline-Walters_2015_NBER-Evaluating,
+@TechReport{Kline_Walters_2015_NBER-Evaluating,
   Title                    = {Evaluating Public Programs with Close Substitutes: The Case of {H}ead {S}tart},
   Author                   = {Kline, Patrick and Walters, Christoper},
   Institution              = {National Bureau of Economic Research},
@@ -66889,7 +66891,7 @@ Robinson, Lara Rachel},
   Timestamp                = {2013.05.16}
 }
 
-@Article{Robins-etal_1995_JASA,
+@Article{Robins_Rotnitzky_1995_JASA,
   Title                    = {Analysis of Semiparametric Regression Models for Repeated Outcomes in the Presence of Missing Data},
   Author                   = {Robins, James M. and Rotnitzky, Andrea and Zhao, Lue Ping},
   Journal                  = {Journal of the American Statistical Association},
