--- a/output/select_rslt_male_2016-08-23a_jld.tex
+++ b/output/select_rslt_male_2016-08-23a_jld.tex
@@ -2,6 +2,7 @@
   \toprule
    Category & Variable & Age & (1) & (2) & (3) & (4) & (5) & (6)\\
     \midrule
+    \multicolumn{9}{c}{Males} \\ \\
     % cat 7
      \mc{1}{l}{Labor Income} & \mc{1}{l}{Employed} & \mc{1}{c}{30} & \mc{1}{c}{0.119} & \mc{1}{c}{0.179} & \mc{1}{c}{-0.050} & \mc{1}{c}{0.041} & \mc{1}{c}{0.245} & \mc{1}{c}{0.262} \\
 
