--- a/output/back-envelope-comparison-table.tex
+++ b/output/back-envelope-comparison-table.tex
@@ -1,7 +1,7 @@
 
 \begin{tabular}{cllcc}
 \toprule
-Age & \mc{1}{c}{NPV Source} & Component & \citet{Kline-Walters_2016_QJE} & Authors' Method \\
+Age & \mc{1}{c}{NPV Source} & Component & \citet{Kline_Walters_2016_QJE} & Authors' Method \\
 & & & Method & \\
 \midrule
 \multirow{2}{*}{27} & \cite{Chetty_Friedman_etal_2010_HowDoesYour} & Labor income & 1.04 (s.e. 0.36) &  \\
