adding sensitivity to the appendix

--- a/AppResOutput/1_abccare.tex
+++ b/AppResOutput/1_abccare.tex
@@ -2,7 +2,7 @@
 
 \setlength\tabcolsep{0.3em}
 
-\subsection{{Combining Functions, Aggregated}}
+\subsubsection{{Combining Functions, Aggregated}}
 
 
 	\begin{table}[H]
@@ -24,7 +24,7 @@
 	\end{table}  
 \clearpage
 
-\subsection{{Combining Functions, by Category}}
+\subsubsection{{Combining Functions, by Category}}
 
 \noindent The tables in this section contain an extra column. This column contains the number of variables for the outcome category used to construct the combining function statistic. \\
 
@@ -65,7 +65,7 @@
 	\end{table}   
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample}
+\subsubsection{Treatment Effects for Pooled Sample}
 
 
 	\begin{table}[H]
@@ -170,7 +170,7 @@
 	\input{AppResOutput/abccare_jul7/rslt_pooled_cat16}
 	\end{table} 
 
-\subsection{Treatment Effects for Male Sample}
+\subsubsection{Treatment Effects for Male Sample}
 
 
 	\begin{table}[H]
@@ -274,7 +274,7 @@
      \label{table:abccare_rslt_male_cat16}
 	\input{AppResOutput/abccare_jul7/rslt_male_cat16}
 	\end{table} 
-\subsection{Treatment Effects for Female Sample}
+\subsubsection{Treatment Effects for Female Sample}
 
 
 	\begin{table}[H]
@@ -380,7 +380,7 @@
 	\end{table} 
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample, Step Down}
+\subsubsection{Treatment Effects for Pooled Sample, Step Down}
 
 \noindent The tables in this section present $p$-values calculated using the step-down method\footnote{\citet{Lehmann_Romano_2005_testing,Romano_Shaikh_2006_AnnStat}. See \citet{Heckman_Moon_etal_2010_QE} for an example of an application.}
 
@@ -486,7 +486,7 @@
 	\input{AppResOutput/abccare_jul7/rslt_pooled_cat16_sd}
 	\end{table} 
 
-\subsection{Treatment Effects for Male Sample, Step Down}
+\subsubsection{Treatment Effects for Male Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -591,7 +591,7 @@
 	\input{AppResOutput/abccare_jul7/rslt_male_cat16_sd}
 	\end{table} 
 
-\subsection{Treatment Effects for Female Sample, Step Down}
+\subsubsection{Treatment Effects for Female Sample, Step Down}
 
 
 	\begin{table}[H]
