--- a/heckman.bib
+++ b/heckman.bib
@@ -9746,6 +9746,21 @@
   Timestamp                = {2006.11.15}
 }
 
+@Article{Blundell-etal_2015_J-Pub-E,
+  Title                    = {Labor Income Dynamics and the Insurance from Taxes, Transfers, and the Family},
+  Author                   = {Blundell, Richard and Graber, Michael and Mogstad, Magne},
+  Journal                  = {Journal of Public Economics},
+  Year                     = {2015},
+
+  Month                    = {July},
+  Pages                    = {58--73},
+  Volume                   = {127},
+
+  Doi                      = {10.1016/j.jpubeco.2014.04.011},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.05}
+}
+
 @Article{Blundell-etal_2013_AER,
   Title                    = {Control Functions and Simultaneous Equations Methods},
   Author                   = {Blundell, Richard and Kristensen, Dennis and Matzkin, Rosa L.},
@@ -17215,6 +17230,19 @@
   Language                 = {eng}
 }
 
+@Book{Claeskens-Hjort_2008_Model-Selection,
+  Title                    = {Model Selection and Model Averaging},
+  Author                   = {Claeskens, Gerda and Hjort, Nils Lid},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2008},
+
+  Address                  = {Cambridge, UK},
+  Series                   = {{C}ambridge Series in Statistical and Probabilistic Mathematics},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.05}
+}
+
 @Article{Clarida_1987_IER,
   Title                    = {Consumption, Liquidity Constraints and Asset Accumulation in the Presence of Random Income Fluctuations},
   Author                   = {Clarida, Richard H.},
@@ -22015,6 +22043,19 @@
 
   Owner                    = {Jenni},
   Timestamp                = {2015.07.23}
+}
+
+@Book{Diebold_2007_Forecasting,
+  Title                    = {Elements of Forecasting},
+  Author                   = {Diebold, Francis X.},
+  Publisher                = {Thomson South-Western},
+  Year                     = {2007},
+
+  Address                  = {Mason, OH},
+  Edition                  = {4},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.05}
 }
 
 @Article{Diebolt_Robert_1994_JRSS,
@@ -29653,8 +29694,8 @@
 }
 
 @Unpublished{ABCCARE_Dataset,
-  Title                    = {Documentation of Full ABC/CARE Treatment Effects},
-  Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, J. and Hojman, Andr\'{e}s and Koh, Yu Kyung and Shea, Joshua and Ziff, Anna},
+  Title                    = {Documentation of Full {ABC}/{CARE} Treatment Effects},
+  Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Koh, Yu Kyung and Shea, Joshua and Ziff, Anna},
   Note                     = {Unpublished Manuscript, University of Chicago},
   Year                     = {2016},
 
@@ -31737,6 +31778,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31749,17 +31801,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
