--- a/output/controlsets.tex
+++ b/output/controlsets.tex
@@ -5,22 +5,16 @@
 \label{tab:pselectvars}
 \begin{tabular}{C{5cm} C{5cm} C{5cm}}
 \toprule
-\mc{3}{l}{\textbf{1. Prediction of Preschool Take-up}} \\
-\midrule
-Number of relatives index	& Grandma in county	& Born in the fall \\\\
-\midrule
-\mc{3}{l}{\textbf{2. Prediction of Outcomes}} \\
-\midrule
-Maternal IQ			& Maternal education		& Mother's age at birth \\
+\textbf{Maternal IQ}			& \textbf{Maternal education}		& Mother's age at birth \\
 High Risk Index		& Parent income			& Premature birth \\
 1 minute Apgar score	& 5 minute Apgar score	& Mother married \\
-Teen pregnancy		& Father at home			& Number of siblings \\
+Teen pregnancy		& \textbf{Father at home}			& Number of siblings \\
 Cohort 				& Mother is employed		& \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table lists the variables we permute over when selecting the background variables we control for in our estimations. We use two sets of background variables as controls. The first set is the one that best predicts selection into preschool. We choose the three variables that minimize the Bayesian Information Criterion in a regression of a preschool enrollment indicator on three out of the 17 variables listed listed in Panels (1) and (2) in the table. The second set of background variables is the one that best predicts each outcome, using a similar criterion, based on the 14 variables listed in Panel (2). We pool the six controls resulting from these two selection processes.
+\item Note: This table lists the variables we permute over when selecting the background variables we control for in our estimations. We bold the variables we choose based on the procedure explained in this section.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
